--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,51 @@
 #order {
   display: none;
   background-color: rgb(196, 98, 245);
-  margin: 20% 10%;
+  margin-top: 0%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 20%;
   padding: 15px;
   border-radius: 20px;
 }
 
 body {
   background-image: url("https://s3.amazonaws.com/spoonflower/public/design_thumbnails/0121/4658/rrrrrrrtiny-pizza_shop_thumb.png");
+  font-family: 'Schoolbell', cursive;
+  text-align: center;
 }
+
+h1 {
+  font-family: 'Bangers', cursive;
+}
+
 
 .box {
   background-color: rgb(196, 98, 245);
-  margin: 20% 10%;
+  margin: 15% 10% 5% 10%;
   padding: 15px;
   border-radius: 20px;
 }
 
 button {
-  
+  background-color: gold;
+  border-radius: 8px;
+}
+button:hover {
+  background-color: white;
+}
+
+button:active {
+  background-color: rgb(36, 35, 35);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
 label {
   font-weight: bolder;
+  margin-left: 15px;
 }
 
 select{
-  margin-bottom: 15px;
+  margin: 3px;
 }
